0031844: Coding - memory leak in Standard_MMgrFactory

Added missing deletion (previously commented without a hint why).