src/Standard/Standard.cxx
@@ -179,8 +179,11 @@ Standard_MMgrFactory::Standard_MMgrFactory()
 
 Standard_MMgrFactory::~Standard_MMgrFactory()
 {
-  if (  myFMMgr )
+  if (myFMMgr != NULL)
+  {
     myFMMgr->Purge(Standard_True);
+    delete myFMMgr;
+  }
 }
 
 //=======================================================================
@@ -208,7 +211,7 @@ Standard_MMgrFactory::~Standard_MMgrFactory()
 // WNT MSVC++) to put destructing function in code segment that is called
 // after destructors of other (even static) objects. However, this is not 
 // done by the moment since it is compiler-dependent and there is no guarantee 
-// thatsome other object calling memory manager is not placed also in that segment...
+// that some other object calling memory manager is not placed also in that segment...
 //
 // Note that C runtime function atexit() could not help in this problem 
 // since its behaviour is the same as for destructors of static objects 
